# clicked-ads-classification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: batch_example.csv  df_model.csv
models/: tuned_logistic_regression_model.joblib
tasks/Task 2 - Data Cleaning & Preprocessing/: Muhammad Cikal Merdeka_Mini_Project_4_Task_2.pptx  Templete Task 2.pptx
tasks/Task 3 - Data Modeling/: Muhammad Cikal Merdeka_Mini_Project_4_Task_3.pptx  Templete Task 3.pptx
tasks/Task 4 - Business Recommendation & Simulation/: Muhammad Cikal Merdeka_Mini_Project_4_Task_4.pptx  Templete Task 4.pptx
utils/: __init__.py  preprocessing.py  statistics.py
utils/ori/: feature_definitions.py  preprocessing.py
